style: contrast issues

--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -35,7 +35,7 @@
     margin-left: 20px;
     margin-right: 20px;
     font-family: 'Noto serif', serif;
-    color: #aaaaaa;
+    color: #535353;
     font-weight: 700;
     font-size: 11px;
     letter-spacing: 2px;
